WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
100202
[MathML] Timeouts on linux after
r132264
https://bugs.webkit.org/show_bug.cgi?id=100202
Summary
[MathML] Timeouts on linux after r132264
Dave Barton
Reported
2012-10-23 22:49:41 PDT
From <
http://build.webkit.org/builders/Chromium%20Linux%20Release%20%28Tests%29/builds/40204/steps/layout-test/logs/stdio
>: Regressions: Unexpected timeouts : (9) mathml/operator-hijacks-fenced-node.xhtml [ Timeout ] mathml/presentation/fenced.xhtml [ Timeout ] mathml/presentation/mo-stretch.html [ Timeout ] mathml/presentation/mo.xhtml [ Timeout ] mathml/presentation/over.xhtml [ Timeout ] mathml/presentation/row-alignment.xhtml [ Timeout ] mathml/presentation/row.xhtml [ Timeout ] mathml/presentation/style-changed.html [ Timeout ] mathml/presentation/sub.xhtml [ Timeout ]
Attachments
Patch
(3.65 KB, patch)
2012-10-24 09:52 PDT
,
Dave Barton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dave Barton
Comment 1
2012-10-24 09:52:37 PDT
Created
attachment 170417
[details]
Patch
Eric Seidel (no email)
Comment 2
2012-10-24 10:15:40 PDT
Comment on
attachment 170417
[details]
Patch LGTM.
Eric Seidel (no email)
Comment 3
2012-10-24 10:16:00 PDT
Comment on
attachment 170417
[details]
Patch Presumably cq+ wont hurt here, adding.
WebKit Review Bot
Comment 4
2012-10-24 10:20:53 PDT
Comment on
attachment 170417
[details]
Patch Clearing flags on attachment: 170417 Committed
r132365
: <
http://trac.webkit.org/changeset/132365
>
WebKit Review Bot
Comment 5
2012-10-24 10:20:56 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug